<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.classification.ClassificationActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cat_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_name"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/cat_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cat_himalaya"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ras : "
                android:fontFamily="@font/poppins_bold"/>
        <TextView
            android:id="@+id/cat_ras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ras"
            android:fontFamily="@font/poppins_bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/cat_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            />
        <Button
            android:id="@+id/btn_save_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/adopt"
            android:background="@drawable/background_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>