<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyItemActivity">



    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/buy_item"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/whiskas"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_item"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            />
        <Button
            android:id="@+id/btn_save_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_BuyItem"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>