<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Capstone.getstarted.getstartActivity">

    <TextView
        android:id="@+id/titletv"
        android:layout_width="365dp"
        android:layout_height="98dp"
        android:text="@string/getstart"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/getstartiv"
        android:layout_width="350dp"
        android:layout_height="327dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletv"
        app:srcCompat="@drawable/gets" />

    <TextView
        android:id="@+id/desctv"
        android:layout_width="361dp"
        android:layout_height="83dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getstartiv" />

    <Button
        android:id="@+id/getstartbt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/getstarted"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/desctv" />


</androidx.constraintlayout.widget.ConstraintLayout>