<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.AdoptPersianActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        >

        <TextView
            android:id="@+id/name_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_name_persian"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24dp"
            android:layout_gravity="center"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cat_persian"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_persia"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            />
        <Button
            android:id="@+id/btn_adoptus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="205dp"
            android:text="@string/adopt"
            android:background="@drawable/background_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>