<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".KameraFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/ambil_atau_pilih_foto"
            android:textSize="20dp"
            android:layout_margin="10dp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/camera"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Ambil foto hewan dan kami akan mencarikan daskripsi hewan tersebut"/>

        <Button
            android:id="@+id/take_foto"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="@string/take_foto"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/take_galeri"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="@string/teke_galeri"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>