<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="337dp"
        android:background="@drawable/background_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/circles"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Profile"
                android:textSize="20dp"
                android:textColor="@color/white"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/photo_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo_profile"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/neme_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/name_profile"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center" />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editTextTextPersonName"
        android:layout_width="330dp"
        android:layout_height="380dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/cardbottob_background"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

<!--            //username-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textSize="14dp"
                android:fontFamily="@font/poppinslight"/>

            <TextView
                android:id="@+id/id_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20dp"
                android:fontFamily="@font/poppins_bold"
                />
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="1dp"
                android:background="@color/black"/>

<!--            email-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Email"
                android:textSize="14dp"
                android:fontFamily="@font/poppinslight"/>

            <TextView
                android:id="@+id/id_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20dp"
                android:fontFamily="@font/poppins_bold"
                />
            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="1dp"
                android:background="@color/black"/>

<!--            button-->
            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/edit_profile"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:background="@drawable/background_button"
                android:onClick="klok"/>


        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>